# test_smit_studio

./: Dockerfile  README.md  docker-compose.yml  download_data.py  entrypoint.sh  pyproject.toml  run.py
src/: __init__.py
src/api/: schemas.py
src/api/routers/: cargo_router.py
src/api/services/: cargo_service.py
src/core/: settings.py  tortoise_conf.py
src/db/: db.py  models.py
src/db/migrations/models/: 0_20230720190518_init.py
